--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <parent>
+    <groupId>org.opendaylight.odlparent</groupId>
+    <artifactId>odlparent</artifactId>
+    <version>1.5.0-SNAPSHOT</version>
+    <relativePath/>
+  </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.opendaylight.integration</groupId>
   <artifactId>root</artifactId>
@@ -37,7 +43,6 @@
     <feature.plugin2oc.version>0.2.0-SNAPSHOT</feature.plugin2oc.version>
     <feature.tcpmd5.version>1.1.0-SNAPSHOT</feature.tcpmd5.version>
     <karaf.branding.version>1.1.0-SNAPSHOT</karaf.branding.version>
-    <karaf.version>3.0.1</karaf.version>
     <maven.surefire.version>2.16</maven.surefire.version>
     <checkstyle.version>2.13</checkstyle.version>
     <enforcer.version>1.3.1</enforcer.version>
