--- a/distributions/karaf/pom.xml
+++ b/distributions/karaf/pom.xml
@@ -71,6 +71,16 @@
       <scope>runtime</scope>
     </dependency>
 
+    <!-- integration test feature -->
+    <dependency>
+      <artifactId>features-integration-test</artifactId>
+      <groupId>org.opendaylight.integration</groupId>
+      <version>${project.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+      <scope>test</scope>
+    </dependency>
+
     <!-- External application -->
     <dependency>
       <groupId>org.opendaylight.vtn</groupId>
