--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -259,6 +259,14 @@
     </dependency>
 
     <dependency>
+      <groupId>org.opendaylight.usc</groupId>
+      <artifactId>usc-features</artifactId>
+      <version>${feature.usc.version}</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
+
+    <dependency>
       <groupId>org.opendaylight.snmp</groupId>
       <artifactId>features-snmp</artifactId>
       <version>${snmp.plugin.version}</version>
