--- a/features/index/pom.xml
+++ b/features/index/pom.xml
@@ -192,7 +192,13 @@
       <classifier>features</classifier>
       <type>xml</type>
     </dependency>
-
+    <dependency>
+      <groupId>org.opendaylight.sfc</groupId>
+      <artifactId>features-sfc-sb-rest</artifactId>
+      <version>0.1.0-SNAPSHOT</version>
+      <classifier>features</classifier>
+      <type>xml</type>
+    </dependency>
     <dependency>
       <groupId>org.opendaylight.sfc</groupId>
       <artifactId>features-sfclisp</artifactId>
@@ -200,13 +206,12 @@
       <classifier>features</classifier>
       <type>xml</type>
     </dependency>
-
     <dependency>
-          <groupId>org.opendaylight.sfc</groupId>
-          <artifactId>features-sfcofl2</artifactId>
-          <version>0.1.0-SNAPSHOT</version>
-          <classifier>features</classifier>
-          <type>xml</type>
+      <groupId>org.opendaylight.sfc</groupId>
+      <artifactId>features-sfcofl2</artifactId>
+      <version>0.1.0-SNAPSHOT</version>
+      <classifier>features</classifier>
+      <type>xml</type>
     </dependency>
 
     <dependency>
